# northernlights

./: .gitignore  README.md
client/: CMakeLists.txt
client/include/: color.h  controller.h  image.h  screensource.h  source.h  udpcontroller.h
client/include/unix/: udpcontroller.h
client/include/win32/: lolsource.h  udpcontroller.h
client/src/: color.cpp  image.cpp  main.cpp  screensource.cpp
client/src/unix/: udpcontroller.cpp
client/src/win32/: lolsource.cpp  udpcontroller.cpp
firmware/src/: controller.cpp  controller.h  main.cpp
